--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
 --c-logo-accent: #4D5AE5;
 --c-bgr-c-s: #F4F4FD;
 --c-team-members-bgr: #FFF;
+--c-border-portfolio: #E7E9FC;
 }
 
 
@@ -28,8 +29,36 @@ ul {
     list-style-type: none;
 }
 
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 0 156px;
+}
+
 /* Header */
+
+.header-inner {
+        align-items: center;
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+}
+
+
+.header-contacts {
+    display: flex;
+    gap: 40px;
+}
+
+.header-nav {
+    align-items: center;
+display: flex;
+flex-grow: 1;
+gap: 24px;
+}
+
 .logo-up {
+align-items: center;
 color: var(--c-logo-accent);
 font-family: "Raleway" ,sans-serif;
 font-size: 18px;
@@ -43,7 +72,17 @@ text-transform: uppercase;
 color:var(--c-title);
 }
 
+.nav-list {
+    display: flex;
+    gap: 40px;
+    flex-grow: 1;
+    justify-content: center;
+}
+
+
 .nav-link {
+    display: inline-block;
+    padding: 24px 0;
 color: var(--c-title);
 font-weight: 500;
 line-height: 1.5;
@@ -60,6 +99,10 @@ color: var(--c-feetback);
 
 
 /* Addres */
+.header-contacts {
+
+}
+
 .mail-contacts {
 font-style: normal;
 }
@@ -80,17 +123,27 @@ color: var(--c-feetback);
 
 
 /* Main section 1 */
-.hero-section {
+.hero-inner {
 background-color: var(--c-title);
+padding: 188px 472px;
 }
 
 .hero-title {
+    margin: 0 auto;
+    max-width: 496px;
+    margin-bottom: 48px;
 text-align: center;
 color: var(--c-button-h1);
 font-size: 56px;
 font-weight: 700;
 line-height: 1.07;
 letter-spacing: 0.02em;
+}
+
+.hero-button {
+display: flex;
+align-items: center;
+justify-content: center;   
 }
 
 .button {
@@ -105,6 +158,7 @@ line-height: 1.5;
 letter-spacing: 0.04em;
 }
 
+
 .button:hover {
 color: var(--c-button-h1);
 background-color: var(--c-hover-button-back);
@@ -118,7 +172,18 @@ background-color: var(--c-hover-button-back)
 background-color: var(--c-hover-button-back);    
 }
 
+
 /* Main section 2 */
+.section-principles {
+    background-color: var(--c-button-h1);
+    padding: 120px 0;
+}
+
+.principles-list {
+    display: flex;
+    gap: 24px;
+}
+
 .title-visually-hidden {
 color: var(--c-hide-title);
 text-align: center;
@@ -144,10 +209,16 @@ letter-spacing: 0.02em;
 
 /* Main section 3 */
 .section-three {
+padding: 120px 0;
 background-color: var(--c-bgr-c-s);
 }
 
+.team-images {
+margin-bottom: 32px;
+}
+
 .title-section-three {
+margin-bottom: 72px;
 text-align: center;
 text-transform: capitalize;
 color: var(--c-title);
@@ -158,11 +229,25 @@ letter-spacing: 0.02em;
 }
 
 /* Team names */
+.team-list {
+    display: flex;
+    gap: 24px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 .team-name {
+flex-basis: calc((100% -72px) / 4);
 background-color: var(--c-team-members-bgr);
 }
 
+.team {
+    text-align: center;
+    border-radius:  0px 0px 4px 4px;
+}
+
 .team-member {
+    margin-bottom: 8px;
 color: var(--c-title);
 font-size: 20px;
 font-weight: 500;
@@ -171,6 +256,7 @@ letter-spacing: 0.02em;
 }
 
 .profession-team-member {
+    margin-bottom: 32px;
 color: var(--c-text);
 line-height: 1.5;
 letter-spacing: 0.02em;
@@ -178,7 +264,34 @@ letter-spacing: 0.02em;
 
 
 /* Main section 4 */
+.section-portfolio {
+  padding: 120px 0;
+}
+
+.portfolio-list {
+    display: flex;
+    gap: 24px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.portfolio-text {
+padding: 0 16px 32px;
+}
+
+.portfolio-name {
+flex-basis: calc((100%-48px) / 3);
+background-color: var(--c-team-members-bgr);
+}
+
+.portfolio {
+    border: 1px solid var(--c-border-portfolio);
+    background-color: var(--c-team-members-bgr);
+}
+
+
 .title-section-four {
+    margin-bottom: 72px;
 text-align: center;
 color: var(--c-title);
 font-size: 36px;
@@ -189,6 +302,7 @@ letter-spacing: 0.02em;
 
 /* App Marketing */
 .functionality {
+margin-bottom: 8px;
 color: var(--c-title);
 font-size: 20px;
 font-weight: 500;
@@ -213,6 +327,8 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 }
 
+
+
 .logo-accent-down {
     color: var(--c-footer-logo-paragraf);
 }
@@ -222,6 +338,7 @@ text-transform: uppercase;
 }
 
 .guideline {
+    width: 264px;
     color:var(--c-footer-logo-paragraf);
 line-height: 1.5;
 letter-spacing: 0.02em;
