--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,10 @@ color: var(--c-feetback);
 
 
 /* Main section 1 */
+.hero-section {
+     padding: 188px 0;
+}
+
 .hero-inner {
 background-color: var(--c-title);
 text-align: center;
@@ -144,15 +148,14 @@ padding: 188px 472px;
 }
 
 .hero-title {
-    margin: 0 auto;
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    color: var(--c-button-h1);
     max-width: 496px;
+    margin: 0 auto;
     margin-bottom: 48px;
-text-align: center;
-color: var(--c-button-h1);
-font-size: 56px;
-font-weight: 700;
-line-height: 1.07;
-letter-spacing: 0.02em;
 }
 
 .hero-button {
@@ -162,22 +165,22 @@ justify-content: center;
 }
 
 .button {
-display: block;
-min-width: 169px;
-height: 56px;    
-font-family: inherit;
-color: var(--c-button-h1);
-background-color: var(--c-button-back);
-border-radius: 4px;
-border: none;
-padding: 16px 32px;
-margin: 0 auto;
-cursor: pointer;
-font-size: 16px;
-font-weight: 500;
-line-height: 1.5;
-letter-spacing: 0.04em;
-box-shadow: 0 4px 4px rgb(0, 0, 0, 0.225);
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    font-family: "Roboto", sans-serif;
+    background-color: var(--c-button-back);
+    color: var(--c-button-h1);
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    font-weight: 500;
+    padding: 16px 32px;
+    cursor: pointer;
+    border-radius: 4px;
+    margin: 0 auto;
+    border: none;
+    box-shadow: 0 4px 4px rgb(0, 0, 0, 0.225);
 }
 
 
@@ -208,14 +211,14 @@ background-color: var(--c-hover-button-back);
 
 .principles-name {
     width: calc((100% - 72px) / 4);
+    margin-bottom: 8px;
 }
 
 .principles-title {
 color: var(--c-hide-title);
-text-align: center;
-font-size: 36px;
-font-weight: 700;
-line-height: 1.11;
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
 letter-spacing: 0.02em;
 margin-bottom: 8px;
 }
@@ -226,6 +229,7 @@ font-size: 20px;
 font-weight: 500;
 line-height: 1.2;
 letter-spacing: 0.02em;
+
 }
 
 .text-principles {
@@ -265,8 +269,9 @@ letter-spacing: 0.02em;
 }
 
 .team-name {
-flex-basis: calc((100% -72px) / 4);
+width: calc((100% - 72px) / 4);
 background-color: var(--c-team-members-bgr);
+border-radius: 0px 0px 4px 4px;
 }
 
 
@@ -283,6 +288,7 @@ background-color: var(--c-team-members-bgr);
 }
 
 .team-member {
+    text-align: center;
     margin-bottom: 8px;
 color: var(--c-title);
 font-size: 20px;
@@ -292,6 +298,7 @@ letter-spacing: 0.02em;
 }
 
 .team-member-text {
+    text-align: center;
     margin-bottom: 32px;
 color: var(--c-text);
 line-height: 1.5;
@@ -323,13 +330,13 @@ letter-spacing: 0.02em;
 }
 
 .portfolio-text {
-padding: 0 16px 32px;   
+padding: 32px 16px;   
     border: 1px solid var(--c-border-header-portfolio);
     border-top: none;
 }
 
 .portfolio-name {
-width: calc((100%-48px) / 3);
+width: calc((100% - 48px) / 3);
 background-color: var(--c-team-members-bgr);
 }
 
@@ -341,10 +348,6 @@ background-color: var(--c-team-members-bgr);
     max-width: 100%;
 }
 
-.portfolio {
-    border: 1px solid var(--c-border-header-portfolio);
-    background-color: var(--c-team-members-bgr);
-}
 
 
 /* App Marketing */
