--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ ul {
 }
 
 .header-inner {
-        align-items: center;
+    align-items: center;
     display: flex;
     justify-content: space-between;
     gap: 24px;
@@ -114,7 +114,12 @@ color: var(--c-feetback);
 
 /* Addres */
 .header-contacts {
+display: flex;
+gap: 40px;
+}
 
+.header-contacts li:last-child {
+    margin-right: 0;
 }
 
 .mail-contacts {
@@ -122,9 +127,11 @@ font-style: normal;
 }
 
 .addres-mail-contacts {
-color: var(--c-text);
-line-height: 1.5;
-letter-spacing: 0.02em;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--c-text);
 }
 
 .addres-mail-contacts:hover {
@@ -138,30 +145,20 @@ color: var(--c-feetback);
 
 /* Main section 1 */
 .hero-section {
+    text-align: center;
+    background-color: var(--c-title);
      padding: 188px 0;
 }
 
-.hero-inner {
-background-color: var(--c-title);
-text-align: center;
-padding: 188px 472px;
-}
-
 .hero-title {
+    max-width: 496px;
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
     color: var(--c-button-h1);
-    max-width: 496px;
     margin: 0 auto;
     margin-bottom: 48px;
-}
-
-.hero-button {
-display: flex;
-align-items: center;
-justify-content: center;   
 }
 
 .button {
@@ -199,6 +196,20 @@ background-color: var(--c-hover-button-back);
 
 
 /* Main section 2 */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+
+
+}
+
 .section-principles {
     background-color: var(--c-button-h1);
     padding: 120px 0;
@@ -229,7 +240,7 @@ font-size: 20px;
 font-weight: 500;
 line-height: 1.2;
 letter-spacing: 0.02em;
-
+margin-bottom: 8px;
 }
 
 .text-principles {
@@ -265,7 +276,10 @@ letter-spacing: 0.02em;
     gap: 24px;
     flex-wrap: wrap;
     row-gap: 48px;
+}
 
+.team-list:nth-child(4) {
+    margin-right: 0;
 }
 
 .team-name {
@@ -278,7 +292,7 @@ border-radius: 0px 0px 4px 4px;
 .team {
     text-align: center;
     border-radius:  0px 0px 4px 4px;
-    padding: 32px 16px;
+    padding: 32px 0;
     border: 1px solid var(--c-border-header-portfolio);
     border-top: none;
 }
