--- a/css/styles.css
+++ b/css/styles.css
@@ -201,17 +201,13 @@ background-color: var(--c-hover-button-back);
 
 /* Main section 2 */
 .visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border: 0;
-
-
+    position: absolute !important;
+    clip: rect(1px 1px 1px 1px);
+    padding: 0 !important;
+    border: 0 !important;
+    height: 1px !important;
+    width: 1px !important;
+    overflow: hidden !important;
 }
 
 .section-principles {
@@ -282,7 +278,7 @@ letter-spacing: 0.02em;
     row-gap: 48px;
 }
 
-.team-list:nth-child(4) {
+.team-list:last-child {
     margin-right: 0;
 }
 
