--- a/css/styles.css
+++ b/css/styles.css
@@ -41,22 +41,23 @@ ul {
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
-
 }
 
 /* Header */
 
 .header {
-    border-bottom: 1px solid var(--c-border-header-portfolio);
-    
+    border-bottom: 1px solid var(--c-border-header-portfolio); 
 }
 
-.header-inner {
+.header-inner-container {
     align-items: center;
     display: flex;
     justify-content: space-between;
     gap: 24px;
+    margin-right: 332px;
 }
+
+
 
 .nav {
 align-items: center;
@@ -67,7 +68,6 @@ gap: 24px;
 }
 
 .logo-up {
-align-items: center;
 color: var(--c-logo-accent);
 font-family: "Raleway" ,sans-serif;
 font-size: 18px;
@@ -75,6 +75,7 @@ font-weight: 700;
 line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
+margin-left: 332px;
 margin-right: 76px;
 }
 
