--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ ul {
     padding-left: 0;
 }
 
-.container {
+.container .header-inner-container {
     width: 1158px;
     margin: 0 auto;
     padding-left: 15px;
