--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ ul {
     padding-left: 0;
 }
 
-.container .header-inner-container {
+.container {
     width: 1158px;
     margin: 0 auto;
     padding-left: 15px;
@@ -49,7 +49,7 @@ ul {
     border-bottom: 1px solid var(--c-border-header-portfolio); 
 }
 
-.header-inner-container {
+.header-inner {
     align-items: center;
     display: flex;
     justify-content: space-between;
